<resources>
    <string name="app_name">Assignment 9</string>

    <!-- Menu Items -->
    <string name="menu_item1">Home</string>
    <string name="menu_item2">About John</string>
    <string name="menu_item3">Register</string>

    <!-- Main activity -->
    <string name="greeting">Laveta, John 6/6/2018</string>
    <string name="about_john">John is currently a field service engineer for a proton therapy
    center in Seattle, WA. He is studying Application Development at North Seattle College.</string>
    <string name="imgContent">Image of Me</string>

    <!-- Form specific strings -->
    <string name="title">User Registration</string>
    <string name="name">Full Name</string>
    <string name="username">Username</string>
    <string name="occupation">Occupation</string>
    <string name="desc">Enter a short description of yourself…</string>
    <string name="age">"Your age: "</string>
    <string name="young">Must be 18 to register!</string>
    <string name="dob">Click to Set Date of Birth</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="reqd">* indicates required field</string>
    <string name="star">*</string>

    <!-- Registration Fragment strings -->
    <string name="regTitle">Profile</string>
    <string name="nameAge" formatted="false">%1$s, %2$s</string>
    <string name="form">Back to Form</string>

    <!-- Matches Fragment Strings -->
    <string name="matchTitle">Matches</string>
    <string name="matchesPlaceHolder">You\'ll find potential matches here!</string>
    <string name="liked" formatted="false">You liked %1$s.</string>
    <string name="unliked" formatted="false">You unliked %1$s.</string>
    <string name="distanceText" formatted="false">Distance: %1$s miles</string>

    <!-- Setting Fragment String -->
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="setSubmit">Settings saved!</string>
    <string name="privateButton">Private</string>
    <string name="publicButton">Public</string>
    <string name="setTitle">Settings</string>
    <string name="settingPlaceHolder">Match Settings</string>
    <string name="timeTitle">Set Reminder Time</string>
    <string name="distTitle">Set Search Distance in Miles</string>
    <string name="ageTitle">Set Age Range</string>
    <string name="genderTitle">Set Gender</string>
    <string name="privacyTitle">Set Privacy</string>
    <string name="current_range">Current age range: %1$d - %2$d years old.</string>

    <!-- Location Strings -->
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your location setting is \'Off\'. Please enable location to use this app.</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>

    <!-- Blank Match String -->
    <string name="blank_name">Match Name</string>
    <string name="blank_imageURL">http://www.catster.com/wp-content/uploads/2017/08/A-fluffy-cat-looking-funny-surprised-or-concerned.jpg</string>
    <string name="blank_distance">Distance: null</string>
</resources>