<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <ScrollView android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settingText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settingPlaceHolder"
                android:textSize="@dimen/header"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/timeTitle"
                android:layout_marginTop="@dimen/occu_pad"/>

            <TimePicker
                android:id="@+id/reminderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/clear"
                android:layout_marginTop="@dimen/clear"
                android:scaleX=".75"
                android:scaleY=".75"
                android:timePickerMode="spinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/distTitle"
                android:layout_marginTop="@dimen/occu_pad"/>
            <Spinner
                android:id="@+id/maxDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/genderTitle"
                android:layout_marginTop="@dimen/occu_pad"/>
            <Spinner
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/privacyTitle"
                android:layout_marginTop="@dimen/occu_pad"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/privacyGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/privateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privateButton" />
                <RadioButton
                    android:id="@+id/publicButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publicButton" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/ageTitle"
                android:layout_marginTop="@dimen/occu_pad"/>

            <TextView
                android:id="@+id/rangeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_body"
                android:text="@string/current_range" />

            <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                android:id="@+id/ageSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/clear"
                rsb:absoluteMaxValue="18"
                rsb:absoluteMinValue="100" />
            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>