...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/greeting"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/Base.TextAppearance.AppCompat.Medium"/>
...
            android:background="@drawable/edit_text_border"
            android:padding="@dimen/form_pad"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="goToRegisterActivity"
            android:text="@string/young"
            android:background="@drawable/button_inactive"
...
